Overflow fix

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -115,13 +115,15 @@ section {
       padding: 1rem 2rem;
       color: $color-black;
       word-wrap: break-word;
+      position: relative;
 
-      &:first-child {
-        margin-left: 2rem;
-      }
-
-      &:last-child {
-        margin-right: 2rem;
+      &:last-child:after {
+        content: "";
+        display: block;
+        position: absolute;
+        right: -2rem;
+        width: 2rem;
+        height: 1px;
       }
 
       @include respond(desktop) {
@@ -202,12 +204,13 @@ section {
       color: $color-black;
       word-wrap: break-word;
 
-      &:first-child {
-        margin-left: 2rem;
-      }
-
-      &:last-child {
-        margin-right: 2rem;
+      &:last-child:after {
+        content: "";
+        display: block;
+        position: absolute;
+        right: -2rem;
+        width: 2rem;
+        height: 1px;
       }
 
       @include respond(desktop) {
